# tg-export

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/tg_export/: __init__.py  __main__.py  auth.py  cli.py  config.py  fetcher.py  formatters.py  media.py  models.py  pagination.py  renderer.py
src/tg_export/resources/css/: style.css
src/tg_export/resources/templates/: base.html.j2  index.html.j2  messages.html.j2
tests/: test_config.py  test_formatters.py  test_pagination.py  test_renderer.py
