[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-export"
version = "0.1.0"
description = "Export Telegram channel messages to static HTML (matching Telegram Desktop format)"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.43",
    "cryptg>=0.6",
    "click>=8.3",
    "jinja2>=3.1",
    "rich>=15.0",
]

[project.scripts]
tg-export = "tg_export.cli:main"

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tg_export = ["resources/**/*"]
